--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ PyPDF2 = "^3.0.1"
 python-pptx = "^0.6.21"
 python-multipart = "^0.0.6"
 arrow = "^1.2.3"
-pinecone-client = "^2.2.2"
+pinecone-client = "2.2.2"
 loguru = "^0.7.0"
 
 [tool.poetry.scripts]
